--- a/backup.html
+++ b/backup.html
@@ -12,7 +12,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="shortcut icon" href="images/nubank2.svg" type="image/x-icon">
     <script src="main.js" defer></script>
     <title>Copia Nubank</title>
   </head>
@@ -107,12 +106,10 @@
       </section>
 
       <section class="container-media">
-        <div class="title-container">
-          <div class="second-card-title">
-            <h2>O que já saiu na mídia.</h2>
-          </div>
+        <div class="second-card-title">
+          <h2>O que já saiu na mídia.</h2>
         </div>
-      
+
         <div class="container-info-media">
           <div class="second-container-info-media">
             <h4>
@@ -120,7 +117,10 @@
               valiosas da<br />
               América Latina
             </h4>
-            <a href="https://www.cnnbrasil.com.br/economia/nubank-recebe-us-400-mi-e-se-torna-uma-das-5-instituicoes-mais-valiosas-da-al/">Leia a matéria</a>
+            <a
+              href="https://www.cnnbrasil.com.br/economia/nubank-recebe-us-400-mi-e-se-torna-uma-das-5-instituicoes-mais-valiosas-da-al/"
+              >Leia a matéria</a
+            >
             <figure class="image-cnn">
               <img src="./images/logocnn.png" alt="Logo CNN" />
             </figure>
@@ -161,11 +161,6 @@
               />
             </figure>
           </div>
-        </div>
-      </section>
-      <section class="simplified-life">
-        <div class="card-title2 card-limit-width">
-          <h2>Simplifique a sua vida. Peça seu Nubank.</h2>
         </div>
       </section>
     </main>
